--- a/Dashboard/DashboardWebApp/Pages/RSUs/Index.cshtml
+++ b/Dashboard/DashboardWebApp/Pages/RSUs/Index.cshtml
@@ -7,7 +7,7 @@
 }
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
-<h1>Rsus</h1>
+<h1>RSUs</h1>
 
 @*/<p>
         <a asp-page="./Create">Create</a>
