--- a/Dashboard/DashboardWebApp/Pages/Components/SNMPGet/GET.cshtml
+++ b/Dashboard/DashboardWebApp/Pages/Components/SNMPGet/GET.cshtml
@@ -4,7 +4,7 @@
 
 <div class="row">
     <div class="col-md-9">
-        <form method="post">
+        <form method="post" asp-page-handler="GET">
             <div class="row">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <input type="hidden" asp-for="ManagerId" />
